Feature/scheduled packing db (#4)
* add database schema for vehicles and shipments, configure Liquibase and JPA

* add shipment domain model, including address and shipment entities, and update SQL schema

* add tracking number generation with Hashids and update SQL schema

* add shipment creation and retrieval methods in ShipmentService, update SQL schema for address fields

* add DTOs and controller for shipment creation and tracking

* add parcel ID to shipments and update related DTOs and mappers

* add createdAt parameter to Shipment constructor and update related mappings

* add global exception handling for ShipmentNotFoundException and create ErrorResponse DTO

* add unit tests to shipmentService,Shipment,ShipmentMapper

* add ParcelDto with validation, update pom.xml for webmvc-test dependency, and create ShipmentControllerTest for shipment creation and tracking

* refactor public class encapsulation breaks at packing package

* refactor: change public classes to package-private in shipment domain and introduce JpaTrackingIdSource for tracking number generation

* refactor replace value object classes via records

* feat: implement packing orchestration and scheduling for shipment processing

* feat: enhance logging in PackingOrchestrationService and ShipmentService for better tracking and debugging

* feat: implement dispatch service and vehicle management for shipment processing

* feat: add vehicle packing placements table and integrate with dispatch service for improved packing management

* feat: add vehicle packing placements table and integrate with dispatch service for improved packing management

* feat: update packing strategy and service methods for improved parcel handling

---------

Co-authored-by: bovadenis <bovadzianis@gmail.con>